fix for unintended whitespace

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,7 +1,8 @@
 #about-container {
   height: 100vh;
-  width: 100%;
+  max-width: 100%;
   display: flex;
+  justify-content: space-between;
 
   h2 {
     margin: 0;
