--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,6 @@
 .App-container {
-  position: absolute;
   height: 410vh;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
 }
